PN osion korjaukset

--- a/tex/gradu.tex
+++ b/tex/gradu.tex
@@ -652,13 +652,13 @@ Regularized computational methods are very precise, but they are typically much 
 
 \subsection{Approximating general relativity}
 
-While Newtonian dynamics is a perfectly valid approximation in everyday life, it stops giving correct results when very massive objects or objects moving at a significant fraction of the speed of light are concerned. In these situations we need to use general relativity (GR), which describes gravity as a geometric property of spacetime. This is described by the Einstein field equations, which are the set of 10 coupled, non-linear partial differential equations that describe the fundamental interaction of gravitation as a result of spacetime being curved by mass and energy. The field equations are usually expressed as
+While Newtonian dynamics is a perfectly valid approximation in everyday life, it stops giving correct results when examining very massive compact objects or objects moving at a significant fraction of the speed of light. In these situations we need to use general relativity (GR), which describes gravity as a geometric property of spacetime. This theory is described by the Einstein field equations, which are the set of 10 coupled, non-linear partial differential equations that describe the fundamental interaction of gravitation as a result of spacetime being curved by mass and energy. The field equations are usually expressed as
 \begin{equation}
 R_{\mu \nu} - \frac{1}{2}R g_{\mu \nu} + \Lambda g_{\mu \nu} = \frac{8 \pi G}{c^4} T_{\mu \nu} \ ,
 \end{equation}
-where $R_{\mu \nu}$ is the Ricci curvature tensor and $R$ is the scalar curvature which both are used to describe how the geometry of curved space differs from the geometry of flat Euclidean space, $g_{\mu \nu}$ is the metric tensor which describes the geometric and causal structure of spacetime in our universe, $\Lambda$ is the cosmological constant which describes the energy density of space, $T_{\mu \nu}$ is the stress-energy tensor which describes mass and energy as the source of gravity in the universe, $G$ is the gravitational constant, and $c$ is the speed of light.
+where $R_{\mu \nu}$ is the Ricci curvature tensor and $R$ is the scalar curvature which both are used to describe how the geometry of curved space differs from the geometry of flat Euclidean space. The parameter $g_{\mu \nu}$ is the metric tensor which describes the geometric and causal structure of spacetime in our universe, $\Lambda$ is the cosmological constant which describes the energy density of space, and $T_{\mu \nu}$ is the stress-energy tensor which describes mass and energy as the source of gravity in the universe. Finally $G$ and $c$ are the gravitational constant and the speed of light respectively.
 
-These equations are very hard to solve exactly due to their non-linear nature, and doing fully general relativistic simulations is computationally very intensive, so more wieldy methods are required for large-scale simulations. This is where post-Newtonian (PN) expansions come in. Post-Newtonian expansions in general relativity are used for finding an approximate solution of the Einstein field equations in the weak field approximation.
+These equations are very hard to solve exactly due to their non-linear nature, and doing fully general relativistic simulations is computationally very expensive, so more wieldy methods are required for large-scale simulations. This is where post-Newtonian (PN) expansions come in. Post-Newtonian expansions in general relativity are used for finding an approximate solution of the Einstein field equations in the weak field approximation.
 In other words, the post-Newtonian theory is an approximate version of general relativity that applies when the gravitational field is relatively weak, and the motion of the matter is relatively slow, $v/c \sim 0.01$. The theory successfully describes the gravitational field of our solar system for example, but it can also be applied to situations involving compact bodies with strong internal gravity.
 %
 %The post-Newtonian theory is derived from the Landau-Lifshitz formulation of the Einstein field equations. The equations can be written as 
@@ -695,41 +695,41 @@ The post-Newtonian corrections are known for a general N-body system only up to 
 \mathbf{a}_{\mathrm{Newton},i} + \mathbf{a}_{\mathrm{1.0PN}, i} &= \sum_{j \neq i} \frac{G m_j \mathbf{n}_{ji}}{r_{ij}^2} + \frac{1}{c^2} \sum_{j \neq i} \left[ \vphantom{\sum_{k \neq j} \frac{G m_k}{r_{jk}}} v_i^2 + 2 v_j^2 - 4(\mathbf{v}_i \cdot \mathbf{v}_j) \right. \nonumber \\
 &- \left. \frac{3}{2}(\mathbf{n}_{ij} \cdot \mathbf{v}_j)^2 - 4 \sum_{k \neq i} \frac{G m_k}{r_{ik}} - \sum_{k \neq j} \frac{G m_k}{r_{jk}} + \frac{1}{2} (\mathbf{r}_{ji} \cdot \mathbf{a}_j) \right] \nonumber \\
 &+ \frac{1}{c^2} \sum_{j \neq i} \frac{G m_j}{r_{ij}^2} \left[ \mathbf{n}_{ji} \cdot (4 \mathbf{v}_i - 3 \mathbf{v}_j) \right] (\mathbf{v}_i - \mathbf{v}_j) \nonumber \\
-&+ \frac{7}{2c^2} \sum_{j \neq i} \frac{G m_j \mathbf{a}_j}{r_{ij}} + \mathcal{O} \left( \frac{v^4}{c^4} \right) \ .
+&+ \frac{7}{2c^2} \sum_{j \neq i} \frac{G m_j \mathbf{a}_j}{r_{ij}} + \mathcal{O} \left( \frac{v}{c} \right)^4 \ . \label{equ:PN1Nbody}
 \end{align}
-Here $\mathbf{n}_{ij} = \mathbf{r}_{ij}/r_{ij}$ is the unit vector pointing from $i$ to $j$, and the big O notation indicates terms of the order $(v^4/c^4)$ and higher. One can see that the acceleration of a particular body depends on the accelerations of all the other bodies in the system, a new relativistic feature which does not appear in purely Newtonian systems. And since the accelerations that are being calculated also appear on the right hand side of the equation, the equations must be solved iteratively if exact solutions are needed. However using the usual Newtonian accelerations on the right hand side of the equation in place of the PN corrected ones works as a good approximation.
+Here $\mathbf{n}_{ij} = \mathbf{r}_{ij}/r_{ij}$ is the unit vector pointing from $i$ to $j$, and the big O notation indicates terms of the order $(v/c)^4$ and higher. One can see that the acceleration of a particular body depends on the accelerations of all the other bodies in the system, a new relativistic feature which does not appear in purely Newtonian systems. And since the accelerations that are being calculated also appear on the right hand side of the equation, the equations must be solved iteratively if exact solutions are required. However using the usual Newtonian accelerations on the right hand side of the equation in place of the PN corrected accelerations works as a good first approximation.
 
 \subsection{Gravitational waves}
 
-While the EIH equations give accurate results for example in our solar system, it would be desirable to get more accurate approximations for more extreme systems. General equations of PN corrections for a three-body system are known up to the order 2.0PN \citep{gravity}, but if we go down to only a two-body system, PN corrections are known up to order of 3.5PN due to the relative simplicity of the situation. An extremely interesting effect arises from these later terms. The first three integer terms 1.0PN, 2.0PN, and 3.0PN are conservative, and we can find expressions for the total energy and angular momentum of the system. However the 2.5PN and 3.5PN corrections contain dissipative terms, and when these are taken into account the total energy and angular momentum of the system is not conserved. This is called the radiation reaction effect, and these losses are due to the emissions of gravitational waves (GW) \citep{gravwaves}. After 3.5PN corrections, even the integer terms start contributing to the radiation reaction. Gravitational waves are generated by accelerating masses, and can be considered wave like disturbances in the curvature of spacetime. This effect causes the orbit in the two body problem to shrink and circularize as energy is radiated away from the system. Gravitational waves play a big part for example in the final phases of a black hole binary merger.
+While the EIH equations (Eq. \ref{equ:PN1Nbody}) give accurate results for example in our solar system, it is important to get more accurate approximations also for more extreme systems. General equations of PN corrections for a three-body system are known up to order 2.0PN \citep{gravity}, but if we consider only a two-body system, PN corrections are known up to order of 3.5PN due to the relative simplicity of the situation. An extremely interesting effect arises from these later terms. The first three integer terms 1.0PN, 2.0PN, and 3.0PN are conservative, and we can find expressions for the total energy and angular momentum of the system. However the 2.5PN and 3.5PN corrections contain dissipative terms, and when these are taken into account the total energy and angular momentum of the system is not conserved. This is called the radiation reaction effect, and these losses are due to the emission of gravitational waves (GW) \citep{gravwaves}. After 3.5PN corrections, even the integer terms start contributing to the radiation reaction. Gravitational waves are generated by accelerating masses, and can be considered wave like disturbances in the curvature of spacetime. This effect causes the orbit in the two-body problem to shrink and circularize as energy is radiated away from the system. Gravitational waves play a big part for example in the final phases of a black hole binary merger.
 
-The 2.5PN term contains the most dominant radiation reaction terms, and its effects on the system can be calculated by formulas derived by \cite{peters-mathews:1963}, which give us how much energy and angular momentum the system loses, averaged over a single orbital period:
+The 2.5PN term contains the most dominant radiation reaction terms, and its effects on the system can be calculated by formulas derived by \cite{peters-mathews:1963}, which give the amount of energy and angular momentum the system loses, averaged over a single orbital period:
 \begin{align}
 \left< \frac{\mathrm{d} E}{\mathrm{d} t} \right> &= - \frac{32}{5} \frac{G^4 \mu^2 M^3}{c^5 a^5} \frac{1 + \frac{73}{24}e^2 + \frac{37}{96}e^4}{(1-e^2)^{7/2}} \\
 \left< \frac{\mathrm{d} L_z}{\mathrm{d} t} \right> &= - \frac{32}{5} \frac{G^{7/2} \mu^2 M^{3/2}}{c^5 a^{7/2}} \frac{1 + \frac{7}{8}e^2}{(1-e^2)^2} \ .
 \end{align}
-Here $a$ and $e$ are simply the semimajor axis and orbital eccentricity of the system, and $\mu$ and $M$ are the reduced and total mass of the two bodies. \cite{peters:1964} also derived equations for the changes in the semimajor axis and eccentricity of the orbit as a result of these GW losses:
+Here $a$ and $e$ are simply the semimajor axis and orbital eccentricity of the system, and $\mu$ and $M$ are the reduced and total mass of the two bodies. It should be noted that these formulas consider only the effects of the 2.5PN term, and not any of the other terms. \cite{peters:1964} also derived equations for the changes in the semimajor axis and eccentricity of the orbit as a result of these GW losses:
 \begin{align}
 \left< \frac{\mathrm{d} a}{\mathrm{d} t} \right> &= - \frac{64}{5}\frac{G^3 \mu M^2}{c^5 a^3} \frac{1 + \frac{73}{24}e^2 + \frac{37}{96}e^4}{(1-e^2)^{7/2}} \\
 \left< \frac{\mathrm{d} e}{\mathrm{d} t} \right> &= - \frac{304}{15} e \frac{G^3 \mu M^2}{c^5 a^4} \frac{1 + \frac{121}{304}e^2}{(1-e^2)^{5/2}} \ .
 \end{align}
-Since the terms are negative, the emission of gravitational waves shrinks and circularizes the orbit. One can also see that when the eccentricity is near 1 or as the semimajor axis approaches 0, the effects strongly increase. This makes sense, as in both of these cases the orbiting body passes close to the other body, so the orbital velocity is high as well.
+Since the terms are negative, the emission of gravitational waves shrinks and circularizes the orbit. One can also see that when the eccentricity is near 1 or as the semimajor axis approaches 0, these effects strongly increase. This makes sense, as in both of these cases the orbiting body passes close to the other massive body in deep plunging orbits, so the orbital velocity is high as well.
 
-These higher than 1.0PN correction terms cause important effects and allow us to examine more extreme systems without using full GR, so being able to include them in large scale simulations would be of great use. One method is to use what is known as the two-body formulation, where we calculate the PN corrections for each particle pair while discarding the least important and computationally most expensive terms dependent on additional bodies. Another method is the cross-term formulation \citep{will:2014}, which works in situations where there is very few massive bodies, like a black hole surrounded by stars, since we are then mostly interested in the interactions between the black hole and the stars, not between the stars themselves, and we can safely ignore these terms.
+These higher than 1.0PN correction terms cause important effects and allow us to examine more extreme systems without using full GR, so being able to include them in large-scale simulations is important. One method is to use what is known as the two-body formulation, where we calculate the PN corrections for each particle pair while discarding the least important and computationally most expensive terms dependent on additional bodies. Another method is the cross-term formulation \citep{will:2014}, which works in situations where there is very few massive bodies, like a black hole surrounded by stars, since we are then mostly interested in the interactions between the black hole and the stars, not between the stars themselves, and we can safely ignore these other terms.
 
 \subsection{The first application of PN corrections}
 
-The first use of a PN expansion (to the first order) was made by Einstein himself in calculating the perihelion precession of Mercury's orbit.
+The first use of a PN expansion (to the first order) was made by Einstein himself in calculating the perihelion precession of the orbit of Mercury.
 Mercury's perihelion precesses (rotates) around the Sun. This is mainly due to perturbations caused by the presence of the other planets. Another much less significant factor is the oblateness of the Sun. In the 1800s it was noticed that the orbit deviates from the precession predicted by these Newtonian effects by about 43 arc seconds per a tropical century.
-Several different reasons for this deviation were proposed, and perhaps the most prevalent of these was Vulcan. Vulcan is a small hypothetical planet that was supposed to orbit the Sun inside the orbit of Mercury. The perturbations caused by this planet could have explained the anomalous precession of Mercury. 
+Several different reasons for this deviation were proposed, and perhaps the most prevalent of these was Vulcan. Vulcan was believed to be a small hypothetical planet that was supposed to orbit the Sun inside the orbit of Mercury. The perturbations caused by this planet could have explained the anomalous precession of Mercury. 
 %The existence of the planet was hypothesized by the French mathematician Urbain Le Verrier, who also predicted the existence and position of Neptune with only mathematics, so his theory was thought plausible. While many people claimed to have observed the planet, its supposed orbit was so close to the sun that this was extremely challenging to verify.
-There were attempts to confirm the existence of the planet, but in 1915 the hypothetical planet was quite firmly put to rest when Einstein explained the excess precession through his theory of relativity. General relativity gives the equation for the advance in the perihelion of a planet in our solar system in radians per a single orbit:
+There were attempts to confirm the existence of the planet, but in 1915 the hypothetical planet was quite firmly put to rest when Einstein explained the excess precession through his theory of relativity. General relativity gives the equation for the advance of the perihelion of a planet in our solar system in radians per a single orbit:
 \begin{equation}
 \langle \dot{\omega} \rangle = \frac{6 \pi G M}{c^2 a (1-e^2)} \ . \label{equ:pericenterShift}
 \end{equation}
 Here $M$ is the total mass of the system, $a$ is the semimajor axis of the orbit of the planet, and $e$ is the orbital eccentricity \citep{will:tegp}.
 
-The reason why the same extra precession that affects all of the planets had been observed only with Mercury is that the magnitude of the differences from simple Newtonian theory diminishes rapidly as one gets farther from the Sun. As can be seen from equation \ref{equ:pericenterShift}, the rate of the precession increases as eccentricity approaches 1 and as the semimajor axis gets shorter.  Mercury's fairly eccentric orbit makes it much easier to detect the perihelion shift than is the case for the nearly circular orbits of Venus and Earth. 
+The reason why the same extra precession that affects all of the planets had been observed only in Mercury is that the magnitude of the differences from simple Newtonian theory diminishes rapidly as one gets farther from the Sun. As can be seen from equation \ref{equ:pericenterShift}, the rate of the precession increases as eccentricity approaches 1 and as the semimajor axis gets shorter.  Mercury's fairly eccentric orbit makes it much easier to detect the perihelion shift than is the case for the nearly circular orbits of Venus and Earth. 
 This was the first case of solving the general relativistic two-body problem, which is the most common use of the PN expansion nowadays.
 %Hyvää matskua: gravity postminkowskian implementation sivu 10, gravity postnewtonian fundamental heti alku, common reader 3.2
 %In the case of a two-body system, the post-Newtonian corrections give rise to a perturbed Keplerian orbit. The only secular effect on the orbit is the pericenter advance.
@@ -737,11 +737,13 @@ This was the first case of solving the general relativistic two-body problem, wh
 %
 %The intrinsic angular momentum (spin) of a body is also a source of gravity that affects the metric and body motions. The spin causes precession in the ascending node. %TODO lisää kaavaa, gravity kalvoista
 
-There are some systems that cannot be properly described by post-Newtonian approximation because of their extreme conditions. Some examples of such systems include the final phases of a compact object merger, the cores of supernovae, and the structure of rapidly rotating neutron stars. These must be analysed using different methods, for example the full solution of Einstein's equations via numerical methods \citep{will:2006}. 
+There are some systems that cannot be properly described by a post-Newtonian approximation because of their extreme conditions. Some examples of such systems include the final phases of a compact object merger, the cores of supernovae, and the structure of rapidly rotating neutron stars. These must be analysed using different methods, for example the full solution of Einstein's equations using numerical methods \citep{will:2006}. 
 
 \section{Black hole mergers}
 
 (To do: motivaatiota, miksi on kiinostavaa, galaksien törmätessä saadaan aikaa SMBH binäärejä, kolme vaihetta)
+
+There are three main phases that the black holes go through before their eventual merging. At first, when the galaxies start merging, the black holes start sinking into the center of the combined galaxy system due to dynamical friction. They will eventually form a gravitationally bound binary system with a semimajor axis of around 10 parsecs. The semimajor axis of the binary will shrink, also known as hardening, due stars interacting with the binary and carrying away angular momentum and energy. Finally, once the binary is only hundredths of parsecs wide, it will start to noticeably lose energy due to the emission of gravitational waves, until their eventual coalescence.
 
 %TODO kpl 8 Binney ja tremaine, kpl 12 H. Mo
 %open problems tehtävät kotoo
@@ -750,7 +752,7 @@ There are some systems that cannot be properly described by post-Newtonian appro
 
 When for example galaxies merge, the interactions between their components cause the stars to transfer momentum and kinetic energy from their relative orbital motion to random motion. This leads to their orbital decay and the matter sinking into the system. This process, known as dynamical friction, applies to large clusters of particles or even single massive particle, like a black hole, moving through a larger host system \citep{bt-galdyn}.
 
-An intuitive way of understanding the process is to think of a body of mass $M$ travelling through a population of particles of mass $m_a \ll M$. We call the mass $M$ the subject body and the smaller particles of mass $m_a$ field stars. We assume that the field stars are members of a large host with a total mass much greater than $M$, so that it can be approximated as near infite and homogeneous. Thus when the subject body moves through the sea of field particles, it attracts the smaller particles through gravity, and leaves behind a so called gravitational wake. This higher concentration of mass behind the particle compared to in front of it causes a drag force that slows down the subject body. (To do: tähän kuva lisäksi)
+An intuitive way of understanding the process is to think of a body of mass $M$ travelling through a population of particles of mass $m_a \ll M$. We call the mass $M$ the subject body and the smaller particles of mass $m_a$ field stars. We assume that the field stars are members of a large host with a total mass much greater than $M$, so that it can be approximated as near infinite and homogeneous. Thus when the subject body moves through the sea of field particles, it attracts the smaller particles through gravity, and leaves behind a so called gravitational wake. This higher concentration of mass behind the particle compared to in front of it causes a drag force that slows down the subject body. (To do: tähän kuva lisäksi)
 
 \cite{chandrasekhar:1943} derived a formula for the force caused on the subject body by this effect. This force is expressed as
 \begin{equation}
@@ -762,13 +764,13 @@ The logarithm $\mathrm{ln} \Lambda$ is known as the Coulomb logarithm, and if we
 \begin{equation}
 \mathrm{ln} \Lambda \approx \mathrm{ln} \left( \frac{b_{\mathrm{max}}}{b_{90}} \right) \ .
 \end{equation}
-Here $b$ means the impact parameter of a two-body encounter, which is the shortest distance between the two particles, if they passed each other without any interaction. Parameter $b_{max}$ is the maximum impact parameter considered, and $b_{90}$ is the impact parameter at which the direction of the orbit of the passing particle will be altered by $90^{\circ}$. This latter parameter can be expressed as
+Here $b$ means the impact parameter of a two-body encounter, which is the shortest distance between the two particles, if they passed each other without any interaction. Parameter $b_{\mathrm{max}}$ is the maximum impact parameter considered, and $b_{90}$ is the impact parameter at which the direction of the orbit of the passing particle will be altered by $90^{\circ}$. This latter parameter can be expressed as
 \begin{equation}
 b_{90} = \frac{G(M+m_a)}{v^2_{\mathrm{typ}}} \ ,
 \end{equation}
-where $v_{\mathrm{typ}}$ is the typical encounter speed between the particles. This gives Coulomb's logarithm the form of
+where $v_{\mathrm{typ}}$ is the typical encounter speed between the particles. Since we assumed that $M \gg m_a$, we can approximate that $M+m_a \approx M$. This gives Coulomb's logarithm the form of
 \begin{equation}
-\mathrm{ln} \Lambda \approx \mathrm{ln} \left( \frac{b_{\mathrm{max}} v^2_{\mathrm{typ}}}{G(M+m_a)} \right) \ .
+\mathrm{ln} \Lambda \approx \mathrm{ln} \left( \frac{b_{\mathrm{max}} v^2_{\mathrm{typ}}}{GM} \right) \ .
 \end{equation}
 This logarithm basically describes the cut-off of the friction effect at the maximum impact parameter \citep{galform}.
 
@@ -776,7 +778,7 @@ If the subject mass moves slowly, so we can assume that $v_M$ is small, the fiel
 \begin{equation}
 \mathbf{F}_{\mathrm{df}} = -\frac{16 \pi^2}{3} G^2 M^2 m_a \, \mathrm{ln} \Lambda \, f(0) \mathbf{v}_M \ . \label{equ:dynfricslow}
 \end{equation}
-On the other hand if the subject body moves at a sufficiently large speed, the integral in equation \ref{equ:dynamicalfriction} converges to a definite limit, equal to the number density of the field stars divided by $4\pi$ \citep{bt-galdyn}, so we get
+On the other hand if the subject body moves at a sufficiently large speed, the integral in equation \ref{equ:dynamicalfriction} converges to a definite limit, equal to the number density of the field stars $n$ divided by $4\pi$ \citep{bt-galdyn}, so we get
 \begin{equation}
 \mathbf{F}_{\mathrm{df}} = -4 \pi G^2 M^2 m_a n \, \mathrm{ln} \Lambda \, \frac{\mathbf{v}_M}{v_M^3} \ . \label{equ:dynfricfast}
 \end{equation}
