Korjauksia ja lisää tekstiä

--- a/tex/gradu.tex
+++ b/tex/gradu.tex
@@ -242,7 +242,7 @@ L_{Edd} = \frac{4 \pi c G M m_p}{\sigma_T} \simeq 1.26 \left( \frac{M}{M_\odot} 
 \end{equation}
 where $c$ is the speed of light, $G$ is the gravitational constant, $M$ is the mass of the black hole, $m_p$ is the proton mass, and $\sigma_T$ is the Thomson scattering cross-section for an electron. The Thomson cross-section describes the effective area for photon interactions for a free charged particle. Assuming there are no other effects which affect the accretion rate, this limit gives the maximum rate at which black holes can grow solely through spherical accretion. 
 
-A so called `seed' black hole with a mass around $10^6 M_\odot$ would require over 0.5 Gyr to grow into a $10^9 M_\odot$ supermassive black hole, given it constantly grows at Eddington rate. Due to this fact, the observed existence of supermassive black holes of $10^9 M_\odot$ when the universe was around 1 Gyr old implies that these seed black holes must have formed at redshifts larger than 10. In such a young universe there are several ways that intermediate mass black holes could form \citep{mezcua:2017}. These methods are illustrated in figure \ref{fig:imbhs}.
+A so called ``seed'' black hole with a mass around $10^6 M_\odot$ would require over 0.5 Gyr to grow into a $10^9 M_\odot$ supermassive black hole, given it constantly grows at Eddington rate. Due to this fact, the observed existence of supermassive black holes of $10^9 M_\odot$ when the universe was around 1 Gyr old implies that these seed black holes must have formed at redshifts larger than 10. In such a young universe there are several ways that intermediate mass black holes could form \citep{mezcua:2017}. These methods are illustrated in figure \ref{fig:imbhs}.
 
 \begin{figure}
 \centering
@@ -741,24 +741,24 @@ There are some systems that cannot be properly described by a post-Newtonian app
 
 \section{Black hole mergers}
 
-(To do: motivaatiota, miksi on kiinostavaa, galaksien törmätessä saadaan aikaa SMBH binäärejä, kolme vaihetta)
+Nowadays galaxy formation is believed to be a hierarchical or ``bottom-up'' process, where smaller systems interact and merge multiple times, forming ever larger systems \citep{bt-galdyn}. This hierarchical model will also logically result in the central supermassive black holes that most galaxies host interacting with each other. The black holes will form binaries and even eventually merge into one.
 
-There are three main phases that the black holes go through before their eventual merging. At first, when the galaxies start merging, the black holes start sinking into the center of the combined galaxy system due to dynamical friction. They will eventually form a gravitationally bound binary system with a semimajor axis of around 10 parsecs. The semimajor axis of the binary will shrink, also known as hardening, due stars interacting with the binary and carrying away angular momentum and energy. Finally, once the binary is only hundredths of parsecs wide, it will start to noticeably lose energy due to the emission of gravitational waves, until their eventual coalescence.
+There are three main phases that the black holes go through before their eventual merging. At first, when the galaxies start merging, the black holes start sinking into the center of the combined galaxy system due to dynamical friction. They will eventually form a gravitationally bound binary system with a semimajor axis of around 10 parsecs. The semimajor axis of the binary will shrink, also known as hardening, due stars interacting with the binary and carrying away angular momentum and energy. Finally, once the binary is only hundredths of parsecs wide, it will start to noticeably lose energy due to the emission of gravitational waves, until their eventual coalescence. These different regimes will be discussed in the next sections.
 
 %TODO kpl 8 Binney ja tremaine, kpl 12 H. Mo
 %open problems tehtävät kotoo
 
 \subsection{Dynamical friction}
 
-When for example galaxies merge, the interactions between their components cause the stars to transfer momentum and kinetic energy from their relative orbital motion to random motion. This leads to their orbital decay and the matter sinking into the system. This process, known as dynamical friction, applies to large clusters of particles or even single massive particle, like a black hole, moving through a larger host system \citep{bt-galdyn}.
+When galaxies merge, the interactions between their stars cause the stars to transfer momentum and kinetic energy from their relative orbital motion to random motion. This leads to the orbital decay of the stars and causes the matter to sink into the system. This process, known as dynamical friction, applies to large clusters of particles or even single massive particle, like a black hole, moving through a larger host system \citep{bt-galdyn}. It is important to note that dynamical friction is not caused by actual collisions, only by dynamical interactions between the particles.
 
-An intuitive way of understanding the process is to think of a body of mass $M$ travelling through a population of particles of mass $m_a \ll M$. We call the mass $M$ the subject body and the smaller particles of mass $m_a$ field stars. We assume that the field stars are members of a large host with a total mass much greater than $M$, so that it can be approximated as near infinite and homogeneous. Thus when the subject body moves through the sea of field particles, it attracts the smaller particles through gravity, and leaves behind a so called gravitational wake. This higher concentration of mass behind the particle compared to in front of it causes a drag force that slows down the subject body. (To do: tähän kuva lisäksi)
+An intuitive way of understanding the process is to think of a body of mass $M$ travelling through a population of particles of mass $m_a \ll M$. We call the mass $M$ the subject body and the smaller particles of mass $m_a$ field stars. We assume that the field stars are members of a large host with a total mass much greater than $M$, so that it can be approximated as nearly infinite and homogeneous. Thus when the subject body moves through the sea of field particles, it attracts the smaller particles through gravity, and leaves behind a so called gravitational wake. This higher concentration of mass behind the particle compared to in front of the masses causes a drag force that slows down the subject body. (To do: tähän kuva lisäksi)
 
 \cite{chandrasekhar:1943} derived a formula for the force caused on the subject body by this effect. This force is expressed as
 \begin{equation}
 \mathbf{F}_{\mathrm{df}} = M \frac{\mathrm{d} \mathbf{v}_M}{\mathrm{d} t} = -16 \pi^2 G^2 M^2 m_a \mathrm{ln} \Lambda \left[ \int_0^{v_M} f(v_m) v_m^2 \mathrm{d}v_m \right] \frac{\mathbf{v}_M}{v_M^3} \label{equ:dynamicalfriction}
 \end{equation}
-and it is called Chandrasekhar's dynamical friction formula. Here $f(v_m)$ is the distribution function of the field particles. This formula assumes that the field stars have an isotropic velocity distribution, and thus only field stars moving slower than the mass $M$ contribute to the friction. This force always opposes the motion of the subject body, similarly to ordinary frictional drag.
+and is called Chandrasekhar's dynamical friction formula. Here $f(v_m)$ is the distribution function of the field particles. A distribution function gives the number of particles per unit volume having approximately the specified velocity near a certain position. Chandrasekhar's formula assumes that the field stars have an isotropic velocity distribution, and thus position doesn't affect the distribution function. The function is normalized so that integrating it over all the velocities gives the number density of particles near the subject body. The dynamical drag force always opposes the motion of the subject body, similarly to ordinary frictional drag.
 
 The logarithm $\mathrm{ln} \Lambda$ is known as the Coulomb logarithm, and if we approximate that the particles are point masses, it is defined as
 \begin{equation}
@@ -784,7 +784,7 @@ On the other hand if the subject body moves at a sufficiently large speed, the i
 \end{equation}
 Here the mass density $m_a n$ can be replaced with $\rho(< v_M)$, the overall density of the field particles moving slower than the subject body.
 
-From equations \ref{equ:dynfricslow} and \ref{equ:dynfricfast} we can see that unlike with hydrodynamic friction, where the drag always increases as the velocity increases, the situation is more complicated. At sufficiently slow speeds dynamical friction is relative to the speed of the subject body, $F_{\mathrm{df}} \propto v_M$. But at larger speeds the frictional force begins to fall, $F_{\mathrm{df}} \propto v_M^{-2}$. And as the mass density of the field stars can be replaced with the overall density, the force is independent of the individual masses of the field particles, so the formula is also valid for a field with distributed particle masses.
+From equations \ref{equ:dynfricslow} and \ref{equ:dynfricfast} we can see that unlike with hydrodynamic friction, where the drag always increases as the velocity increases, the situation here is more complicated. At sufficiently slow speeds dynamical friction is relative to the speed of the subject body, $F_{\mathrm{df}} \propto v_M$. This is similar to ordinary drag where the force increases with speed. But at larger speeds the frictional force begins to fall off, $F_{\mathrm{df}} \propto v_M^{-2}$. And as the mass density of the field stars can be replaced with the overall density, the force is independent of the individual masses of the field particles, so the formula is also valid for a field with distributed particle masses.
 
 \subsection{Three body scattering}
 
